# polysubml-demo

./: CLAUDE.md  Cargo.toml
alsub/: Cargo.toml
alsub/src/: ast.rs  bound_pairs_set.rs  core.rs  instantiate.rs  lib.rs  parse_types.rs  reachability.rs  spans.rs  type_errors.rs  typeck.rs  unwindmap.rs
alsub/src/ast/: expr.rs
cli_code/: Cargo.toml
cli_code/src/: js_runtime.js
cli_code/tests/: regression.rs
compiler_lib/: Cargo.toml  build.rs
compiler_lib/src/: ast.rs  codegen.rs  core.rs  grammar.lalr  grammar.lalrpop  js.rs  lib.rs  lua.rs  lua_codegen.rs  type_errors.rs  typeck.rs
docs/plans/: 2026-03-03-alsub-extraction-design.md  2026-03-03-phase1-rpds-ustr-refactor.md  2026-03-03-phase2-alsub-extraction.md
lua_bindings/: Cargo.toml
lua_bindings/src/: ast.rs  compiler.rs  core.rs  describe.rs  lib.rs  types.rs
tests/regression/ai_generated_tests/: test27_recursion_limit.ml
tests/regression/baselines/: e2e_complex_poly.expected  e2e_contravariance.expected  e2e_err_duplicate_match_tags.expected  e2e_err_duplicate_record_fields.expected  e2e_err_existential_bad_unpack.expected  e2e_err_func_arg_mismatch.expected  e2e_err_immutable_field.expected  e2e_err_missing_field.expected  e2e_err_poly_escape.expected  e2e_err_poly_int_float.expected  e2e_err_subtyping_branch_field.expected  e2e_err_type_escape_loop.expected  e2e_err_type_escape_mut_ref.expected  e2e_err_type_escape_ref_outside.expected  e2e_err_type_mismatch.expected  e2e_err_unhandled_variant.expected  e2e_existential_ref_safe.expected  e2e_existential_safe_loop.expected  (+111 more)
(+31 files in other folders)
