[package]
name = "regression"
version = "0.1.0"
authors = ["Robert Grosse <n210241048576@gmail.com>"]
license = "Apache-2.0/MIT"
edition = "2024"

[lib]
name = "cli_lib"
path = "src/cli_lib.rs"

[dependencies]
compiler_lib = { path = "../compiler_lib" }
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
tempfile = "3.0"

[dev-dependencies]
similar = { version = "2.2", features = ["text"] }
rquickjs = { version = "0.11", features = ["bindgen"] }
