[package]
name = "compiler_lib"
version = "1.0.0"
authors = ["Robert Grosse <n210241048576@gmail.com>"]
license = "Apache-2.0/MIT"
edition = "2024"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
rpds = "1"
ustr = "1"
itertools = "0.14.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
